Add anonymous login functionality and improve authentication flow.
- Introduce anonymous login method in `AuthService` with error handling.
- Update UI to include anonymous login button with translations.
- Refactor and optimize imports across authentication-related components.
- Enhance error messaging using `@ngx-translate/core` for localization.

--- a/frontend/public/i18n/en.json
+++ b/frontend/public/i18n/en.json
@@ -2,7 +2,8 @@
   "send": "Send",
   "email": "Email",
   "password": "Password",
-  "login": "Login as guest",
+  "sing-in": "Sing-in",
+  "anonymous-login": "Anonymous login",
   "google-login": "Login with Google",
   "message" : {
     "placeholder": "Enter your message..."
