Add modal-based emoji picker and refine chat UI.
- Replace inline emoji picker toggle with modal dialog.
- Update chat input and message tracking for enhanced usability.
- Add translations for emoji picker header.
- Improve router outlet styling for consistent layout.

--- a/frontend/public/i18n/en.json
+++ b/frontend/public/i18n/en.json
@@ -5,6 +5,7 @@
   "sing-in": "Sing-in",
   "anonymous-login": "Anonymous login",
   "google-login": "Login with Google",
+  "select-emoji": "Select emoji",
   "message" : {
     "placeholder": "Enter your message..."
   }
