Localize placeholders and buttons in `language-selector` and `chat` components.
- Add translation keys for placeholders and labels in `ru.json` and `en.json`.
- Apply `ngx-translate` for dynamic content rendering.
- Replace native buttons with PrimeNG `p-button` for consistent theming.
- Adjust `AppComponent` for error message positioning and styling refinements.

--- a/frontend/public/i18n/en.json
+++ b/frontend/public/i18n/en.json
@@ -6,6 +6,7 @@
   "anonymous-login": "Anonymous login",
   "google-login": "Login with Google",
   "select-emoji": "Select emoji",
+  "select-language": "Select language",
   "message" : {
     "placeholder": "Enter your message..."
   }
