Add missing translation keys for authentication error messages across locales
- Include `anonymous_disabled` and `generic_error` translations in `cs.json`, `de.json`, `es.json`, `zh.json`, `ru.json`, and `en.json`.

--- a/frontend/public/i18n/cs.json
+++ b/frontend/public/i18n/cs.json
@@ -9,5 +9,9 @@
   "select-language": "Vybrat jazyk",
   "message": {
     "placeholder": "Zadejte vaši zprávu..."
+  },
+  "auth": {
+    "anonymous_disabled": "Anonymní přihlášení je deaktivováno. Kontaktujte prosím administrátora.",
+    "generic_error": "Došlo k chybě: {{message}}"
   }
 }
